Lo más cerca que estoy de terminar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,4 @@
   </ul>
 </nav>
 
-<router-outlet></router-outlet> <!-- Aquí se cargarán los componentes -->
+<router-outlet></router-outlet>  <!-- Aquí se renderizan los componentes -->
